unpackaged/main/default/objects/Family_Tree_Discount__c/Family_Tree_Discount__c.object-meta.xml
<CustomObject>
    <description>This Object represents a discount structure mastered by an external system. The discount is applied to all products within externally defined product categories.</description>
    <label>Family Tree Discount</label>
    <nameField>
        <label>Family Tree Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Family Tree Discount</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>