unpackaged/main/default/objects/Family_Tree_Discount__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the family tree discount</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>