unpackaged/main/default/objects/Family_Tree_Discount__c/fields/Family_Tree_Discount_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Family_Tree_Discount_External_ID__c</fullName>
    <description>External ID identifying the family tree discount</description>
    <label>Family Tree Discount External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>