unpackaged/main/default/objects/Family_Tree_Discount__c/fields/Family_Tree_Discount_ID__c.field-meta.xml
<CustomField>
    <fullName>Family_Tree_Discount_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Family Tree Discount ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>